--- a/.vercelignore
+++ b/.vercelignore
@@ -1,7 +1,8 @@
-src/
-**/*.scss
-**/*.sass
+# Keep gulp build system
+!gulp/
+!gulpfile.js
+
+# Ignore only raw source assets not needed for build
+src/scss/
+src/js/
 **/*.map
-**/*.js
-!build/js/bundle.min.js
-!build/css/style.min.css
