--- a/.vercelignore
+++ b/.vercelignore
@@ -1,8 +1,9 @@
-# Keep gulp build system
-!gulp/
-!gulpfile.js
+# ✅ Don't ignore anything inside /src/
+# because we need it to build SCSS and JS
 
-# Ignore only raw source assets not needed for build
-src/scss/
-src/js/
+# Only ignore unnecessary files AFTER build
+# If you're NOT serving from /src/, /gulp/, etc. you can ignore:
 **/*.map
+test/
+README.md
+LICENSE
