--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"dev": "cross-env NODE_ENV=developmnent gulp",
 		"watch": "npm run dev",
+		"build": "gulp build",
 		"publish": "cross-env NODE_ENV=production gulp publish",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
