--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,6 @@
 {
-  "outputDirectory": "build"
+  "buildCommand": "npm run build",
+  "outputDirectory": "build",
+  "installCommand": "npm install",
+  "framework": null
 }
