--- a/vercel.json
+++ b/vercel.json
@@ -1,31 +1,3 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": "build",
-  "installCommand": "npm install",
-  "routes": [
-    {
-      "src": "/src/(.*)",
-      "status": 404
-    },
-    {
-      "src": "/gulp/(.*)",
-      "status": 404
-    },
-    {
-      "src": "/(.*\\.scss)",
-      "status": 404
-    },
-    {
-      "src": "/gulpfile.babel.js",
-      "status": 404
-    },
-    {
-      "src": "/package.json",
-      "status": 404
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/build/$1"
-    }
-  ]
+  "outputDirectory": "build"
 }
