--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,14 @@
 {
-  "outputDirectory": "build"
+  "builds": [
+    {
+      "src": "build/**/*",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
+    }
+  ]
 }
