--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,6 @@
 {
-  "outputDirectory": "build"
+  "outputDirectory": "build",
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/$1" }
+  ]
 }
